--- a/src/components/clock/clock.css
+++ b/src/components/clock/clock.css
@@ -1,4 +1,11 @@
 .clock{
     font-size :32px;
     color:#fff;
+    transition: width 3s ;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
+
