--- a/src/components/app/app.css
+++ b/src/components/app/app.css
@@ -11,13 +11,19 @@ body{
     width:100vw;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    flex-direction: row;
     background-color: #555;
     min-height: 100vh;
-    /* padding:5px; */
+    position: relative;
+
+}
+
+.content-wrapper{
+    width:100%;
 }
 @media screen and (min-width:688px){
    span{
        font-size:40px;
    }
+  
 }
